# xplor

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  mkdocs.yml  prek.toml  pyproject.toml
.github/workflows/: docs.yml  main.yml  publish.yml  python-app.yml
docs/: .gitignore  _quarto.yml  contributing.md  contributing.qmd  index.qmd  license.md  license.qmd  llms.txt  usage.md
docs/reference/: VarType.md  XplorCplex.md  XplorCplexCP.md  XplorGurobi.md  XplorHexaly.md  XplorMathOpt.md  XplorModel.md  index.md
docs/scripts/: post-render.py
src/xplor/: __init__.py  _dependencies.py  _utils.py  model.py  obj_expr.py  types.py  typing.py  var.py  var_expr.py
src/xplor/cplex/: __init__.py  model.py  var.py
src/xplor/cplex_cp/: __init__.py  model.py  var.py
src/xplor/exprs/: __init__.py  constr.py  obj.py  var.py
src/xplor/gurobi/: __init__.py  model.py  utils.py  var.py
src/xplor/hexaly/: model.py
src/xplor/mathopt/: model.py
tests/: test_cplex_cp_rcpsp.py  test_expr.py  test_group_agg.py  test_groupby_sum.py  test_gurobi_utils.py  test_mathopt.py  test_minimize_maximize.py  test_model.py  test_multi_objective_cplex.py  test_multi_objective_gurobi.py  test_multi_objective_hexaly.py  test_multi_objective_mathopt.py  test_to_mvar_or_mlinexpr.py  test_utils.py
tests/performance/: __init__.py  test_csr_fast_path.py  test_fast_paths.py
typings/polars/dataframe/: frame.pyi
