[project]
name = "xplor"
version = "0.5.0"
description = "A unified framework for Operation Research modeling with polars"
readme = "README.md"
authors = [
    { name = "Gabriel Robin" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "polars>=1.36.1",
    "scipy[gurobi]>=1.17.0",
]
keywords = [
    "optimization",
    "polars",
    "gurobi",
    "mathopt",
    "cplex",
    "operations research",
]
[project.urls]
Homepage = "https://github.com/gab23r/xplor"
Repository = "https://github.com/gab23r/xplor"
Documentation = "https://gab23r.github.io/xplor/"
"Bug Tracker" = "https://github.com/gab23r/xplor/issues"

[project.optional-dependencies]
gurobi = [
    "gurobipy>=11.0.3",
]
ortools = [
    "ortools>=9.11.4210",
]
hexaly = [
    "hexaly>=14.0.20251203",
]
cplex = [
    # Note: CPLEX does not yet support Python 3.13
    "docplex>=2.27.239",
    "cplex>=22.1.2.0",
]
all = [
    "xplor[gurobi]",
    "xplor[ortools]",
    "xplor[hexaly]",
    "xplor[cplex]",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/xplor"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.8",
    "ipykernel>=7.1.0",
    "ty>=0.0.1a30",
    "prek>=0.2.19",
    "pytest-cov>=7.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]
extras = [
    "xplor[all]",
]

[tool.uv]
default-groups = "all"

[[tool.uv.index]]
url = "https://pypi.python.org/simple"

[[tool.uv.index]]
url = "https://pip.hexaly.com"
name = "hexaly"
explicit=true

[tool.uv.sources]
hexaly = { index = "hexaly" }

[tool.ruff]
line-length = 100
fix = true
target-version="py311"

exclude = ["docs"]

[tool.ruff.lint]
select = [
  "ANN", # flake8-annotations
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # flake8-docstrings
  "E", # pycodestyle
  "EM", # flake8-errmsg
  "F", # pyflakes
  "FA", # flake8-future-annotations
  "FBT001", # flake8-boolean-trap
  "I", # isort
  "ICN", # flake8-import-conventions
  "INT", # flake8-gettext
  "PERF", # perflint
  "PIE", # flake8-pie
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "TC", # flake8-type-checking
  "TD", # flake8-todos
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W", # pycodestyle
]

ignore = [
  "D100", # Missing docstring in public module
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
  "TRY002", # Create your own exception
  "TD002", # missing-todo-author
  "D105", # undocumented-magic-method
  "D107", # Missing docstring in `__init__`
  "D205",
  "D203", # one-blank-line-before-class
  "D213", # multi-line-summary-second-line
  "E501", # Line too long
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "B018", "FBT001", "ANN201"]
"*.ipynb" = ["ALL"]
